<resources>
    <string-array name="days">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string-array name="day_ids">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string-array name="am_pm">
        <item>am</item>
        <item>pm</item>
    </string-array>
    <string name="invalid_schedule_time" translatable="false">Invalid schedule times</string>
    <string name="no_days_selected" translatable="false">No days selected</string>
    <string name="overlaps_with_existing" translatable="false">Overlaps with existing entry</string>
    <string name="ignoring_calls_between" translatable="false">Ignoring Calls between\u0020</string>
    <string name="and" translatable="false">\u0020and\u0020</string>
    <string name="remaining" translatable="false">\u0020remaining</string>
    <string name="delete_call_history" translatable="false">Delete Call History?</string>
    <string name="on_weekends" translatable="false">On Weekends</string>
    <string name="on_weekdays" translatable="false">On Weekdays</string>
    <string name="everyday" translatable="false">Every Day</string>
    <string name="delete_schedule_entry" translatable="false">Delete Schedule entry?</string>
    <string name="minute_singular" translatable="false">minute</string>
    <string name="minute_plural" translatable="false">minutes</string>
    <string name="schedule_delete_dialog" translatable="false">Are you sure you want to delete these schedule items?</string>
    <string name="app_name">Viking Softphone</string>
    <string name="service_name">Viking Service</string>
    <string name="addressbook_label">Viking</string>
    <string name="notification_title">Viking</string>
    <string name="wait_dialog_text">Starting up</string>
    <string name="notification_registered">%s connected</string>
    <string name="notification_register_failure">%s failed to connect</string>
    <string name="tunnel_host"></string>
    <string name="about_version">Viking Android %s</string>
    <string name="about_liblinphone_version">Linphone Core %s</string>
    <string name="about_liblinphone_sdk_version">Linphone SDK %s</string>
    <string name="about_privacy_policy">Visit our privacy policy</string>
    <string name="sync_account_name">linphone contacts</string>
    <string name="notification_reply_label">Reply</string>
    <string name="notification_replied_label">Sent reply: %s</string>
    <string name="notification_call_hangup_label">Hangup</string>
    <string name="notification_call_answer_label">Answer</string>
    <string name="notification_mark_as_read_label">Mark as read</string>
    <string name="username">Username</string>
    <string name="userid">User-id (optional)</string>
    <string name="phone_number">Phone number</string>
    <string name="confirmation_code">Confirmation code</string>
    <string name="international_prefix">International phone number prefix</string>
    <string name="display_name">Display name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Password confirmation</string>
    <string name="domain">Domain</string>
    <string name="remote_provisioning_url">URL</string>
    <string name="email">Email</string>
    <string name="delete_text">Are you sure you want to delete your selection?</string>
    <string name="delete">Delete</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="open">Open</string>
    <string name="continue_text">Continue</string>
    <string name="about">Information</string>
    <string name="deny">Deny</string>
    <string name="no_account">No account configured</string>
    <string name="search">Search</string>
    <string name="outgoing">Outgoing</string>
    <string name="incoming">Incoming</string>
    <string name="missed">Missed</string>
    <string name="settings">Settings</string>
    <string name="connect">Connection</string>
    <string name="decline">Decline</string>
    <string name="conference">Conference</string>
    <string name="link">Link</string>
    <string name="link_account_popup">Do you want to link the account %s with your phone number?</string>
    <string name="maybe_later">Maybe later</string>
    <string name="later">Later</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="link_account">Link your account</string>
    <string name="update_available">An update is available</string>
    <string name="do_not_ask_again">Do not show again</string>
    <string name="delete_contacts_text">Are you sure you want to delete these contacts?\nThey will be deleted from your phone as well!</string>
    <string name="logs_url_copied_to_clipboard">Logs url copied into clipboard</string>
    <string name="app_description">powered by Linphone</string>
    <string name="welcome">Welcome</string>
    <string name="assistant">Assistant</string>
    <string name="assistant_create_account">Create account</string>
    <string name="assistant_link_account">Link account</string>
    <string name="assistant_continue">Continue</string>
    <string name="assistant_activate">Activate your account</string>
    <string name="assistant_finish">Finish configuration</string>
    <string name="assistant_validate_account_1">Your account is created. Please check your mails to validate your account:</string>
    <string name="assistant_validate_account_2">Once it is done, come back here and click on the button.</string>
    <string name="assistant_welcome_desc">This assistant will help you configure and use your SIP account.</string>
    <string name="assistant_linphone_login_desc">Please enter your username and password of Linphone account</string>
    <string name="assistant_login_desc">Please enter your username and password with your SIP domain</string>
    <string name="assistant_remote_provisioning_desc">Please provide your provisioning URL</string>
    <string name="transport">Transport</string>
    <string name="assistant_create_account_phone_number_address">Your SIP address is</string>
    <string name="assistant_login_linphone">Use Linphone account</string>
    <string name="assistant_login_generic">Use SIP account</string>
    <string name="assistant_remote_provisioning">Fetch remote configuration</string>
    <string name="assistant_create_account_part_1">Please confirm your country code and enter your phone number</string>
    <string name="assistant_create_account_part_2">We have sent you a SMS with a validation code to your phone number:</string>
    <string name="assistant_create_account_part_3">To complete your phone number verification, please enter the 4 digit code below:\n</string>
    <string name="assistant_create_account_part_email">Please enter an username, email and password for your Linphone account</string>
    <string name="assistant_display_name_optional">Display name (optional)</string>
    <string name="assistant_linphone_account">Use your Linphone account</string>
    <string name="assistant_generic_account">Use SIP account</string>
    <string name="assistant_remote_provisioning_title">Fetch remote configuration</string>
    <string name="assistant_fetch_apply">Fetch and apply</string>
    <string name="assistant_launch_qrcode">QRCode</string>
    <string name="assistant_login">Login</string>
    <string name="assistant_ec_calibration">Echo canceler calibration in progress</string>
    <string name="assistant_remote_provisioning_login">Enter your login</string>
    <string name="assistant_account_not_validated">Your account has not been validated yet.</string>
    <string name="assistant_error_confirmation_code">The confirmation code is invalid.\r\nPlease try again.</string>
    <string name="assistant_account_validated">Your account has been validated.</string>
    <string name="assistant_error_bad_credentials">Incorrect username or password</string>
    <string name="assistant_codec_down_question">Do you agree to download OpenH264 Video Codec provided by Cisco Systems, Inc.?</string>
    <string name="assistant_codec_downloading">Downloading OpenH264 Video Codec provided by Cisco Systems, Inc.</string>
    <string name="assistant_openh264_downloading">Downloading OpenH264</string>
    <string name="assistant_openh264_restart">Before you can use OpenH264 codec you must restart %s.</string>
    <string name="assistant_openh264_error">Sorry an error has occurred.</string>
    <string name="assistant_codec_downloaded">OpenH264 Video Codec provided by Cisco Systems, Inc. downloaded.</string>
    <string name="wizard_failed">An error occurred, try again later.</string>
    <string name="wizard_server_unavailable">Server unreachable, verify your network connection.</string>
    <string name="wizard_username_unavailable">This username is already taken.</string>
    <string name="assistant_phone_number_unavailable">This phone number is already used.\r\nPlease type a different number.\r\nYou can delete your existing account if you want to reuse your phone number.</string>
    <string name="wizard_username_incorrect">Your username is invalid.</string>
    <string name="assistant_phone_number_incorrect">Your phone number is invalid.</string>
    <string name="wizard_email_incorrect">Your email is invalid.</string>
    <string name="wizard_password_incorrect">Your password is invalid</string>
    <string name="wizard_passwords_unmatched">Passwords do not match.</string>
    <string name="setup_confirm_username">Your username will be %s.\r\n\r\nIt may differ from your input to match requirements.\r\nDo you accept?</string>
    <string name="first_launch_no_login_password">Please enter your login and password</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="assistant_choose_country">Choose a country</string>
    <string name="select_your_country">Select your Country</string>
    <string name="country_code">(%s)</string>
    <string name="use_username_instead_or_phone_number">Use a username (optional)</string>
    <string name="use_email_for_validation">Use email address for account validation</string>
    <string name="no_contact">No contact in your address book.</string>
    <string name="no_sip_contact">No devices in address book.</string>
    <string name="chat_room_creation_filter_hint">Search Devices</string>
    <string name="pref_transport_udp">UDP</string>
    <string name="pref_transport_tcp">TCP</string>
    <string name="pref_transport_tls">TLS</string>
    <string name="pref_device_ringtone">Use device ringtone</string>
    <string name="pref_vibrate_on_incoming_calls">Vibrate while incoming call is ringing</string>
    <string name="pref_auto_answer">Auto answer incoming calls</string>
    <string name="pref_auto_answer_time">Auto answer time (in milliseconds)</string>
    <string name="pref_rfc2833_dtmf">Use RTP DTMF (RFC2833)</string>
    <string name="pref_sipinfo_dtmf">Send out-band DTMFs (SIP INFO)</string>
    <string name="pref_voice_mail">Voice mail URI</string>
    <string name="pref_media_encryption">Media encryption</string>
    <string name="pref_incoming_call_timeout_title">Incoming call hangup (in seconds)</string>
    <string name="content_description_edit_list">Edit List</string>
    <string name="content_description_new_contact">New contact</string>
    <string name="content_description_username_field">Username field</string>
    <string name="content_description_display_field">Display name field</string>
    <string name="content_description_domain_field">Domain field</string>
</resources>