<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:linphone="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:orientation="vertical">

        <org.linphone.settings.widget.SwitchSetting
            android:id="@+id/pref_device_ringtone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            linphone:title="@string/pref_device_ringtone" />

        <org.linphone.settings.widget.SwitchSetting
            android:id="@+id/pref_vibrate_on_incoming_calls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            linphone:title="@string/pref_vibrate_on_incoming_calls" />

        <org.linphone.settings.widget.ListSetting
            android:id="@+id/pref_media_encryption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            linphone:title="@string/pref_media_encryption" />

        <org.linphone.settings.widget.SwitchSetting
            android:id="@+id/pref_sipinfo_dtmf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            linphone:title="@string/pref_sipinfo_dtmf" />

        <org.linphone.settings.widget.SwitchSetting
            android:id="@+id/pref_rfc2833_dtmf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            linphone:title="@string/pref_rfc2833_dtmf" />

        <org.linphone.settings.widget.SwitchSetting
            android:id="@+id/pref_auto_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            linphone:title="@string/pref_auto_answer" />

        <org.linphone.settings.widget.TextSetting
            android:id="@+id/pref_auto_answer_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            linphone:hint="@string/pref_auto_answer_time"
            linphone:title="@string/pref_auto_answer_time" />

        <org.linphone.settings.widget.TextSetting
            android:id="@+id/pref_incoming_call_timeout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            linphone:hint="@string/pref_incoming_call_timeout_title"
            linphone:title="@string/pref_incoming_call_timeout_title" />

        <org.linphone.settings.widget.TextSetting
            android:id="@+id/pref_voice_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            linphone:hint="@string/pref_voice_mail"
            linphone:title="@string/pref_voice_mail" >

        </org.linphone.settings.widget.TextSetting>

        <org.linphone.settings.widget.TextSetting
            android:id="@+id/pref_snooze_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            linphone:hint="Snooze Time"
            linphone:title="Snooze Time (in minutes)"
            tools:visibility="visible" />

    </LinearLayout>

</ScrollView>