<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/toolbar_color"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/newContact"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="?attr/button_background_drawable"
            android:contentDescription="@string/content_description_new_contact"
            android:padding="15dp"
            android:scaleType="center"
            android:src="@drawable/add_icon" />

        <SearchView
            android:id="@+id/searchField"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".6"
            android:gravity="center"
            android:iconifiedByDefault="false"
            android:inputType="textVisiblePassword"
            android:queryBackground="@color/transparent_color"
            android:queryHint="@string/chat_room_creation_filter_hint" />

        <ImageView
            android:id="@+id/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/button_background_drawable"
            android:contentDescription="@string/content_description_edit_list"
            android:padding="15dp"
            android:src="@drawable/delete_selector" />

    </LinearLayout>

    <include layout="@layout/edit_list" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/contactsListRefresher"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/contactsList"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <ProgressBar
            android:id="@+id/contactsFetchInProgress"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone" />

        <TextView
            android:id="@+id/noSipContact"
            style="@style/empty_list_font"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/no_sip_contact"
            android:visibility="gone" />

        <TextView
            android:id="@+id/noContact"
            style="@style/empty_list_font"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/no_contact"
            android:visibility="gone" />

    </RelativeLayout>

</LinearLayout>
